--- a/Garden-Imagination-Frontend/src/app/home/home.component.html
+++ b/Garden-Imagination-Frontend/src/app/home/home.component.html
@@ -1,16 +1,5 @@
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-        <div class="container-fluid">
-            <a href="/" class="navbar-brand">
-                <b>Garden Imagination</b>
-            </a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a href="/" class="nav-link active">Home</a></li>
-                <li class="nav-item"><a href="login" class="nav-link">Login</a></li>
-                <li class="nav-item"><a href="register" class="nav-link">Register</a></li>
-            </ul>
-        </div>
-    </nav>
+    <app-guest-navbar></app-guest-navbar>
 
     <main class="container">
         <div class="text-center mb-4">
