--- a/Garden-Imagination-Frontend/src/app/register/register.component.html
+++ b/Garden-Imagination-Frontend/src/app/register/register.component.html
@@ -1,18 +1,7 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-        <div class="container-fluid">
-            <a href="/" class="navbar-brand">
-                <b>Garden Imagination</b>
-            </a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="login" class="nav-link">Login</a></li>
-                <li class="nav-item"><a href="register" class="nav-link active">Register</a></li>
-            </ul>
-        </div>
-    </nav>
+    <app-guest-navbar></app-guest-navbar>
 
     <main class="container mt-4 d-flex justify-content-center">
         <div class="card mb-4" style="width: 30rem;">
