--- a/Garden-Imagination-Frontend/src/app/guest-navbar/guest-navbar.component.html
+++ b/Garden-Imagination-Frontend/src/app/guest-navbar/guest-navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
     <div class="container-fluid">
-        <a href="/" class="navbar-brand">
+        <a routerLink="/" class="navbar-brand">
             <b>Garden Imagination</b>
         </a>
         <ul class="navbar-nav">
