--- a/Garden-Imagination-Frontend/src/app/login/login.component.html
+++ b/Garden-Imagination-Frontend/src/app/login/login.component.html
@@ -40,7 +40,7 @@
                     </div>
 
                     <div class="mb-3 text-center">
-                        <a href="change-password" class="text-primary">Change Password</a>
+                        <a routerLink="/change-password" class="text-primary">Change Password</a>
                     </div>
                 </form>
             </div>
