--- a/Garden-Imagination-Frontend/src/app/decorator-maintenance/decorator-maintenance.component.html
+++ b/Garden-Imagination-Frontend/src/app/decorator-maintenance/decorator-maintenance.component.html
@@ -1,18 +1,5 @@
 <div class="container-fluid p-0">
-    <nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-        <div class="container-fluid">
-            <a href="/" class="navbar-brand">
-                <b>Garden Imagination</b>
-            </a>
-            <ul class="navbar-nav">
-                <li class="nav-item"><a href="/decorator" class="nav-link">Profile</a></li>
-                <li class="nav-item"><a href="/decorator-appointments" class="nav-link">Appointments</a></li>
-                <li class="nav-item"><a href="/decorator-maintenance" class="nav-link active">Maintenance</a></li>
-                <li class="nav-item"><a href="/decorator-statistics" class="nav-link">Statistics</a></li>
-                <li class="nav-item"><button type="button" class="btn btn-outline-light" (click)="logout()">Logout</button></li>
-            </ul>
-        </div>
-    </nav>
+    <app-decorator-navbar (logoutClicked)="logout()"></app-decorator-navbar>
 
     <main class="container mt-4">
         <h1 class="text-center">Pending Maintenance</h1>
